--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
 /venv/
 
-/.idea/misc.xml
-/.idea/inspectionProfiles/profiles_settings.xml
-/.idea/modules.xml
-/.idea/vcs.xml
-/.idea/Project.iml
+.idea
